
2011-May-6 Struan Robertson

	* System.h/cpp,unitsConversion.h: Further changes toward an extended Chi^2
	definition.

2011-May-2 Struan Robertson

	* System.cpp,unitsConversion.h: Initial changes toward an extended Chi^2
	definition.

2011-May-1 Struan Robertson

	* MESMER manual.doc: Added text on WKB tunnelling.

2011-April-17 Struan Robertson

	* MolecularComponents.h/.cpp: Transition state imaginary frequencies are now
	of type Rdouble to allow for fitting.

2011-April-17 Struan Robertson

	* WKBTunnellingCoefficients.cpp: Refactoring of WKB tunnelling method.

2011-April-16 Struan Robertson

	* WKBTunnellingCoefficients.cpp: Initial revision of WKB tunnelling method (checked 
	in on behalf of Robin Shannon).
	* Examples/Tunnelling: WKB tunnelling test and baseline.

2011-April-16 Chris Morley

	* mesmer1.xsl, punch.xsl: added loss rates to 'punch' output, as requested
	by Robin.

2011-April-15 Struan Robertson

	* CollisionOperator.cpp/.h,System.cpp/.h: Introduced precision enum for clarity.
	* MesmerQA/HSO2: Baseline updated to test all precisions.

2011-March-26 Struan Robertson

	* CollisionOperator.cpp/.h: Minor refactoring.
	* BoltzmannDistribution.cpp: Normalization of distribution.

2011-March-19 Struan Robertson

	* ThermodynamicsTables.cpp: Addition of a read method to give some flexibility
	to table output.

2011-March-13 Struan Robertson

	* MolecularComponents.h/.cpp: Remove redundent code relating to atomic spin
	multiplicity, which is now treated in the DOS calculation methods.

2011-March-10 Struan Robertson

	* MolecularComponents.h/.cpp,ThermodynamicsTables.cpp: An initial revision
	of methods to calculate the thermodynamic functions and the addition of a 
	plug-in class to display their values.

2011-March-07 Struan Robertson

	* TMatrix.h: Introduced and tested routines to permute the collision 
	matrix so that its largest (in magnitude) diagonal elements are at the
	lower right hand corner, as this is supposed to improve numerical 