@@ -1,4 +1,9 @@
 
+2011-May-10 Struan Robertson
+
+	* System.cpp,unitsConversion.h,CollisionOperator.h/.cpp: Addition of expt. 
+	eigenvalues to the Chi^2 definition.
+
 2011-May-6 Struan Robertson
 
 	* System.h/cpp,unitsConversion.h: Further changes toward an extended Chi^2
